--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -2,14 +2,6 @@ server {
     listen       80;
     server_name  localhost;
 
-    #charset koi8-r;
-    #access_log  /var/log/nginx/log/host.access.log  main;
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
@@ -19,26 +11,15 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
+    location /sub {
+        nchan_subscriber;
+        nchan_channel_id $arg_channel;
+        nchan_channel_id_split_delimiter ",";
+        nchan_subscriber_first_message newest;
+    }
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
+    location /pub {
+        nchan_publisher;
+        nchan_channel_id $arg_channel;
+    }
 }
