--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 
 user  nginx;
-worker_processes  1;
+worker_processes  2;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -8,7 +8,7 @@ pid        /var/run/nginx.pid;
 load_module "modules/ngx_nchan_module.so";
 
 events {
-    worker_connections  1024;
+    worker_connections  4096;
 }
 
 http {
@@ -24,7 +24,7 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    keepalive_timeout  650s;
 
     #gzip  on;
 
