--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -22,4 +22,8 @@ server {
         nchan_publisher;
         nchan_channel_id $arg_channel;
     }
+
+    location / {
+        return 200 'healthy!';
+    }
 }
