feat(debug): add nginx stats endpoint

--- a/buda.conf
+++ b/buda.conf
@@ -1,6 +1,5 @@
 server {
   listen 80;
-  server_name 0.0.0.0;
 
   location /sub {
     nchan_subscriber;
@@ -12,7 +11,6 @@ server {
 
 server {
   listen 81;
-  server_name 0.0.0.0;
 
   location /pub {
     nchan_publisher;
@@ -20,8 +18,19 @@ server {
   }
 
   # Stats endpoint
-  location /nchan_stub_status {
+  location /nchan_status {
     nchan_stub_status;
+    access_log off;
+    allow 127.0.0.1;
+    deny all;
+  }
+
+  # Nginx Stats
+  location /nginx_status {
+    stub_status;
+    access_log off;
+    allow 127.0.0.1;
+    deny all;
   }
 
   # Healthcheck endpoint
