--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,9 @@
 nchan:
-  image: localhost:5000/nchan
+  image: us.gcr.io/ops-support-191021/buda-nchan:v1.0.2
   ports:
     - 80:80
-    - 443:443
+    - 81:81
   restart: unless-stopped
   volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf
-    - ./buda.conf:/etc/nginx/conf.d/default.conf
-    - ./buda_wild.crt:/etc/ssl/certs/buda_wild.crt
-    - ./buda_wild.key:/etc/ssl/certs/buda_wild.key
+    - ./buda.conf:/etc/nginx/conf.d/buda.conf
