chore(health): move check to / on port 80
GKE load balancer require this

--- a/buda.conf
+++ b/buda.conf
@@ -7,6 +7,12 @@ server {
     nchan_channel_id_split_delimiter ",";
     nchan_subscriber_first_message newest;
   }
+
+  # Healthcheck endpoint
+  location / {
+    access_log off;
+    return 200;
+  }
 }
 
 server {
@@ -31,10 +37,5 @@ server {
     access_log off;
     allow 127.0.0.1;
     deny all;
-  }
-
-  # Healthcheck endpoint
-  location /server_ok {
-    return 200;
   }
 }
