--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 
 user  nginx;
-worker_processes  2;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -8,7 +8,8 @@ pid        /var/run/nginx.pid;
 load_module "modules/ngx_nchan_module.so";
 
 events {
-    worker_connections  4096;
+    worker_connections  10240;
+    use epoll;
 }
 
 http {
