chore(): upgrade nchan and add event source ping

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ pid        /var/run/nginx.pid;
 load_module "modules/ngx_nchan_module.so";
 
 events {
-    worker_connections  10240;
+    worker_connections  50000;
     use epoll;
 }
 
@@ -23,11 +23,8 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
-    keepalive_timeout  650s;
-
-    #gzip  on;
+    keepalive_timeout  620;
 
     include /etc/nginx/conf.d/*.conf;
 }
