--- a/buda.conf
+++ b/buda.conf
@@ -6,6 +6,7 @@ server {
     nchan_channel_id $arg_channel;
     nchan_channel_id_split_delimiter ",";
     nchan_subscriber_first_message newest;
+    nchan_eventsource_ping_interval 10s;
   }
 
   # Healthcheck endpoint
