chore(): adds websocket ping

--- a/buda.conf
+++ b/buda.conf
@@ -7,6 +7,7 @@ server {
     nchan_channel_id_split_delimiter ",";
     nchan_subscriber_first_message newest;
     nchan_eventsource_ping_interval 10s;
+    nchan_websocket_ping_interval 10s;
   }
 
   # Healthcheck endpoint
